--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "startSeed": "node src/seed.js"
+    "startSeed": "node src/seed.js",
+    "backend": "npm start",
+    "frontend": "cd ../frontend && npm start",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
   },
   "type": "module",
   "author": "",
@@ -20,6 +23,7 @@
     "mongoose": "^6.0.13"
   },
   "devDependencies": {
+    "concurrently": "^6.4.0",
     "nodemon": "^2.0.15"
   }
 }
