add month,day, add dalay between flight 1 and 2, iteration with date

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "geolib": "^3.3.3",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.13",
     "node-open-geocoder": "^4.0.1"
   },
