--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "startSeed": "node src/seed.js",
+    "seed": "node src/seed.js",
     "backend": "npm start",
     "frontend": "cd ../frontend && npm start",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\""
