--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "npx nodemon src/server.js",
     "seed": "node src/seed.js",
     "backend": "npm start",
     "frontend": "cd ../frontend && npm start",
